quick pop up html and remove some console logs

--- a/src/html/interface_popup.html
+++ b/src/html/interface_popup.html
@@ -1,8 +1,17 @@
 <html>
     <head>
-
+        <script type="text/javascript" src="../js/popupHandler.js"></script>
     </head>
     <body>
-        
+        <h1>BackgrArt</h1>
+        <div class="musOptions">
+            <p>Choose the museum from which you want to display art :</p>
+            <input type="checkbox" id="Choose_MetMuseum" name="Choose_museum" >
+            <label>The Metropolitan Museum of Art (New York)</label>
+            <input type="checkbox" id="Choose_LouvreMuseum" name="Choose_museum" >
+            <label>The Louvre (Paris)</label>
+            <br>
+            <button onclick="saveOptions()">Search !</button>
+        </div>
     </body>
 </html>
