--- a/src/html/interface_popup.html
+++ b/src/html/interface_popup.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script type="text/javascript" src="../js/background.js"></script>
         <script type="text/javascript" src="../js/storage.js"></script>
+        <script type="text/javascript" src="../js/museumImage.js"></script>
+        <script type="text/javascript" src="../js/retrieveImages.js"></script>
         <script type="text/javascript" src="../js/popupHandler.js"></script>
     </head>
     <body>
