--- a/src/html/override_newtab.html
+++ b/src/html/override_newtab.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Tab</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/newtab.css">
+    <title>New Tab - BackgrArt</title>
 </head>
-<body>
-    <p>NEW TAB</p>
+<body >
+    <div class="container-fluid pt-3 pb-5 text-center">
+        <div hidden id="zoomedImgContainer" class="row">
+            <img src="../imgs/default/DP169568.jpg" class="img-thumbnail img-fluid" >
+        </div>
+        <div class="row">
+            <div class="col">
+                Left sum    
+            </div>
+            <div class="col">
+                <div class="row d-flex justify-content-center">
+                    <div class="col pb-5">
+                        <img src="../imgs/default/DP169568.jpg" class="img-thumbnail img-fluid" style="max-width: 85%; cursor: pointer;">
+                    </div>
+                    <div class="col">
+                        <div class="bar">
+                            <input class="searchbar" type="text" title="Search" placeholder="Search Google or type a URL">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                Right sum   
+            </div>
+        </div>
+    <!--
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+        <div class="bar">
+                    <input class="searchbar" type="text" title="Search">
+                    <a href="#"> 
+                </div>
+    -->
+    </div>
 </body>
 </html>
