more design works on newtab, not functional

--- a/src/html/interface_popup.html
+++ b/src/html/interface_popup.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="../js/background.js"></script>
-        <script type="module" src="../js/museumImage.js"></script>
-        <script type="module" src="../js/retrieveImages.js"></script>
-        <script type="module" src="../js/popupHandler.js"></script>
     </head>
     <body>
         <h1>BackgrArt</h1>
@@ -20,4 +16,9 @@
         </div>
     </body>
     <a target="_blank" href="https://icons8.com/icon/1106/picture">Painting</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    
+    <script type="module" src="../js/museumImage.js"></script>
+    <script type="module" src="../js/retrieveImages.js"></script>
+    <script type="module" src="../js/popupHandler.js"></script>
+    <script type="module" src="../js/background.js"></script>
 </html>
