--- a/src/html/override_newtab.html
+++ b/src/html/override_newtab.html
@@ -5,42 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/newtab.css">
-    <script type="module" src="../js/newtabHandler.js"></script>
     <title>New Tab - BackgrArt</title>
 </head>
 <body >
 
-    <div class="container-fluid pt-1 pb-5" hidden id="zoomedImgContainer" class="row" style="cursor: pointer;" >
-        <img src="../imgs/default/DP169568.jpg" class="img-fluid" id="zoomedMainImg">
+    <div class="container-fluid pt-1 pb-5"  id="zoomedImgContainer" class="row" style="cursor: pointer;" hidden >
+        <img src="" class="img-fluid" id="zoomedMainImg">
     </div>
     <div class="container-fluid pt-3 pb-5 text-center"  id="newTabContainer" >
         <div class="row" >
 
-            <div class="col d-flex align-items-center">
+            <div class="col d-flex align-items-center justify-content-center ms-5" style="background-color: black;">
                 Left sum    
             </div>
 
             <div class="col">
                 <div class="row d-flex justify-content-center">
                     <div class="col" id="dezoomedImgContainer">
-                        <img src="../imgs/default/DP169568.jpg" class="img-thumbnail img-fluid" style="max-width: 80%; cursor: pointer;" id="displayedMainImg">
+                        <img src="" class="img-thumbnail img-fluid" style="max-width: 80%; cursor: pointer;" id="displayedMainImg">
                     </div>
                     <div class="col pt-5">
-                        <form action="https://www.google.com/search" method="get">
+                        <form action="https://www.google.com/search" method="get" class="search-bar-form">
                             <div class="bar">
                                 <input type="image" class="search" src="../imgs/icons/icon_search_50.png" >
-                                <input class="searchbar" name="q" type="text" title="Search" placeholder="Search Google or type a URL">
+                                <input class="searchbar" name="q" type="text" title="Search" placeholder="Search Google or type a URL" required >
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
 
-            <div class="col d-flex align-items-center">
+            <div class="col d-flex align-items-center justify-content-center me-5" style="background-color: black;">
                 Right sum   
             </div>
 
         </div>
     </div>
+    <script type="module" src="../js/newtabHandler.js"></script>
 </body>
 </html>
