work on the popup design

--- a/src/html/override_newtab.html
+++ b/src/html/override_newtab.html
@@ -23,7 +23,7 @@
 
             <div class="col">
                 <div class="row d-flex justify-content-center">
-                    <div class="col" id="dezoomedImgContainer" style="max-width: 100%;">
+                    <div class="col" id="dezoomedImgContainer" >
 
                         <img id="displayImg" src="../imgs/default/DP169568.jpg" class="img-thumbnail img-fluid" style="cursor: pointer;" />
                     
