--- a/src/html/interface_popup.html
+++ b/src/html/interface_popup.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="../css/popup.css">
     </head>
     <body>
-        <h1>BackgrArt</h1>
-        <div class="musOptions" id="musOptions">
-            <p>Choose the museum from which you want to display art :</p>
-            <input type="radio" id="Choose_MetMuseum" name="Choose_museum" checked="true">
-            <label>The Metropolitan Museum of Art (New York)</label>
-            <br>
-            <input type="radio" id="Choose_LouvreMuseum" name="Choose_museum" >
-            <label>The Louvre (Paris)</label>
-            <br><br>
-            <button id="callButton">Search !</button>
+        <div class="h1 text-center">Fixette</div>
+        <div class="row  row-cols-1">
+            <div class="separator">Museum</div>
+            <div class="col musOptions" id="musOptions">
+                <div class="form-check">
+                    <input type="radio" id="Choose_MetMuseum" name="Choose_museum" checked="true">
+                    <label>The Met</label>
+                </div>
+                <div class="form-check">
+                    <input type="radio" id="Choose_LouvreMuseum" name="Choose_museum" >
+                    <label>The Louvre</label>
+                </div>
+                <br><br>
+                
+            </div>
+            <div class="col text-center">
+                <button class=""id="callButton">Search !</button>
+            </div>
         </div>
+        
     </body>
     <a target="_blank" href="https://icons8.com/icon/1106/picture">Painting</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
     <script type="module" src="../js/popupHandler.js"></script>
