--- a/src/html/override_newtab.html
+++ b/src/html/override_newtab.html
@@ -38,9 +38,9 @@
 
                     <div class="col pt-5">
                         <form action="https://www.google.com/search" method="get" class="search-bar-form">
-                            <div class="bar">
-                                <input type="image" class="search" src="../imgs/icons/icon_search_50.png" ></input>
-                                <input class="searchbar" name="q" type="text" title="Search" placeholder="Search Google or type a URL" required ></input>
+                            <div class="bar d-flex align-items-center justify-content-start">
+                                <input type="image" class="searchIcon" src="../imgs/icons/icon_search_50.png" ></input>
+                                <input class="searchbar ms-3" name="q" type="text" title="Search" placeholder="Search Google or type a URL" required ></input>
                             </div>
                         </form>
                     </div>
