remove le louvre et rajoute des remerciements au Met

--- a/src/html/interface_popup.html
+++ b/src/html/interface_popup.html
@@ -13,10 +13,10 @@
                     <input type="radio" id="Choose_MetMuseum" name="Choose_museum" checked="true">
                     <label>The Met</label>
                 </div>
-                <div class="form-check">
+                <!--<div class="form-check">
                     <input type="radio" id="Choose_LouvreMuseum" name="Choose_museum" >
                     <label>The Louvre</label>
-                </div>
+                </div>-->
                 <br><br>
                 
             </div>
@@ -24,8 +24,10 @@
                 <button class=""id="callButton">Search !</button>
             </div>
         </div>
-        
+        <br>
+        <br>
     </body>
-    <a target="_blank" href="https://icons8.com/icon/1106/picture">Painting</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    <a target="_blank" href="https://icons8.com/icon/1106/picture">Painting</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a><br>
+    Images courtesy of <a target="_blank" href="https://www.metmuseum.org/">The Met</a>
     <script type="module" src="../js/popupHandler.js"></script>
 </html>
