fix crash on first install

--- a/src/html/interface_popup.html
+++ b/src/html/interface_popup.html
@@ -13,10 +13,10 @@
                     <input type="radio" id="Choose_MetMuseum" name="Choose_museum" checked="true">
                     <label>The Met</label>
                 </div>
-                <!--<div class="form-check">
+                <div hidden class="form-check">
                     <input type="radio" id="Choose_LouvreMuseum" name="Choose_museum" >
                     <label>The Louvre</label>
-                </div>-->
+                </div>
                 <br><br>
                 
             </div>
