spinner till image load

--- a/src/html/interface_popup.html
+++ b/src/html/interface_popup.html
@@ -30,4 +30,5 @@
     <a target="_blank" href="https://icons8.com/icon/1106/picture">Painting</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a><br>
     Images courtesy of <a target="_blank" href="https://www.metmuseum.org/">The Met</a>
     <script type="module" src="../js/popupHandler.js"></script>
+    <script type="module" src="../js/newtabHandler.js"></script>
 </html>
