--- a/src/html/override_newtab.html
+++ b/src/html/override_newtab.html
@@ -6,6 +6,72 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/newtab.css">
     <title>New Tab - Fixette</title>
+    <link rel="icon" href="../imgs/icons/icon_16.png">
+    <style>
+        @media (prefers-color-scheme: light) {  
+    body {  
+       background: white;    
+       color: black;  
+    }
+
+    .searchbar{
+        background-color: white;
+    }
+}
+@media (prefers-color-scheme: dark) {  
+    body {  
+       background: rgba(0,0 ,0,0.9);
+       color: white; 
+    }
+
+    .searchbar{
+        background-color: black;
+        color: white;
+    }
+
+    .bar{
+        background-color: black;
+        color: white;
+    }
+}
+
+#imgCaption{
+    font-size: 15px;
+    color: #717171;
+    text-align: center;
+}
+
+.bar{
+    margin:0 auto;
+    max-width:575px;
+    height: 45px;
+    border-radius:10px;
+    border:1px solid #dcdcdc;
+}
+
+.bar:hover{
+    box-shadow: 1px 1px 8px 1px #dcdcdc;
+}
+
+.bar:focus-within{
+    box-shadow: 1px 1px 8px 1px #dcdcdc;
+    outline:none;
+}
+
+.searchbar{  
+    height:100%;
+    border:none;
+    width:95%;
+    font-size:16px;
+    outline: none;
+}
+
+.searchIcon{
+    height:18px;
+    position:relative;
+    left:1.5%;
+}
+    </style>
 </head>
 <body >
 
