--- a/src/html/interface_popup.html
+++ b/src/html/interface_popup.html
@@ -21,7 +21,7 @@
                 
             </div>
             <div class="col text-center">
-                <button type="button" class="btn btn-info" id="callButton"><span hidden id="buttonSpinner" class="spinner-border spinner-border-sm" aria-hidden="true"></span> Paint !</button>
+                <button disabled type="button" class="btn btn-info" id="callButton"><span hidden id="buttonSpinner" class="spinner-border spinner-border-sm" aria-hidden="true"></span> Paint !</button>
             </div>
         </div>
         <br>
