--- a/src/html/interface_popup.html
+++ b/src/html/interface_popup.html
@@ -41,7 +41,7 @@
                     <label id="EnableAIText" for="EnableAICheck" class="form-label">Enable AI insight</label>
                     <input id="enableAISelect" class="form-check-input" type="checkbox" role="switch" id="EnableAICheck">
                 </div>
-                <button id="searchOptButton" type="button" class="btn btn-outline-primary btn-sm">Validate</button>
+                <button id="searchOptButton" type="button" class="btn btn-outline-primary btn-sm">Save</button>
             <div class="mt-3 separator"><img src="../imgs/icons/icon_16.png"></div>
             <div class="mt-2 col text-center">
                 <button disabled type="button" class="btn btn-info" id="callButton"><span hidden id="buttonSpinner" class="spinner-border spinner-border-sm" aria-hidden="true"></span> Paint !</button>
