manually able to change the number of images seen per day + ai insight on back burner

--- a/src/html/interface_popup.html
+++ b/src/html/interface_popup.html
@@ -21,7 +21,7 @@
             <div class="separator">Options</div>
                 <select id="searchOptionsSelect" class="form-select mb-2 form-select-sm" aria-label="Options">
                     <option value="0" selected>Number of images</option>
-                    <option value="1">AI insight</option>
+                    <option hidden value="1">AI insight</option> 
                 </select>
                 <div id="NumImgsOptions" >
                     <label id="numDailyImgsRangeText" for="numDailyImgsRange" class="form-label">Number of images per day : 4 </label>
