Adds optional additional info on the left side

--- a/src/html/override_newtab.html
+++ b/src/html/override_newtab.html
@@ -18,11 +18,13 @@
     <div class="container-fluid pt-5 pb-5 text-center"  id="newTabContainer" >
         <div class="row ">
 
-            <div id="artInfoDivLeft" class="col d-flex justify-content-center ms-5">
-                
+            <div id="artInfoDivLeft" class="col col-3 d-flex justify-content-center ms-5">
+                <div id="additionalInfoDisplay" class="d-flex">
+
+                </div>
             </div>
 
-            <div class="col col-5 " >
+            <div class="col col-6 " >
                 <div class="row row-cols-1 d-flex justify-content-center">
                 <div class="col" id="loadingSpinnerDiv">
                     <div class="spinner-grow text-success" role="status">
@@ -50,7 +52,7 @@
                     </div>
                 </div>
 
-                <p id="imgCaption"></p>
+                <p id="imgCaption" ></p>
 
                 <div class="col pt-5">
                     <form action="https://www.google.com/search" method="get" class="search-bar-form">
@@ -63,7 +65,7 @@
                 </div>
             </div>
 
-            <div id="artInfoDivRight" class="col d-flex align-items-center justify-content-center me-5" >
+            <div id="artInfoDivRight" class="col col-3 d-flex align-items-center justify-content-center me-5" >
                 
             </div>
 
