--- a/src/html/override_newtab.html
+++ b/src/html/override_newtab.html
@@ -16,15 +16,15 @@
     
     </div>
     <div class="container-fluid pt-5 pb-5 text-center"  id="newTabContainer" >
-        <div class="row ">
+        <div class="row justify-content-center" style="width: 100%;">
 
-            <div id="artInfoDivLeft" class="col col-3 d-flex justify-content-center ms-5">
-                <div id="additionalInfoDisplay" class="d-flex">
+            <div id="artInfoDivLeft" class="col col-3 d-flex justify-content-center d-none d-xl-block">
+                <div id="additionalInfoDisplay" class="d-flex " >
 
                 </div>
             </div>
 
-            <div class="col col-6 " >
+            <div class="col col-md-10 col-xl-6" >
                 <div class="row row-cols-1 d-flex justify-content-center">
                 <div class="col" id="loadingSpinnerDiv">
                     <div class="spinner-grow text-success" role="status">
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div id="artInfoDivRight" class="col col-3 d-flex align-items-center justify-content-center me-5" >
+            <div id="artInfoDivRight" class="col col-3 d-flex align-items-center justify-content-center  d-none d-xl-block" >
                 
             </div>
 
