--- a/src/html/interface_popup.html
+++ b/src/html/interface_popup.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="stylesheet" type="text/css" href="../css/popup.css">
     </head>
     <body class="d-flex justify-content-center flex-column">
@@ -25,7 +26,8 @@
                     <option value="2">Complementary informations</option>
                 </select>
                 <div id="NumImgsOptions" >
-                    <label id="numDailyImgsRangeText" for="numDailyImgsRange" class="form-label">Number of images per day : 4 </label>
+                    
+                    <label id="numDailyImgsRangeText" for="numDailyImgsRange" class="form-label"><i class="bi bi-info-circle" title="Choose the number of images to cycle throughout a day. &#013;The higher the number the longer the loading time when &#013;you click on 'Paint!'"></i> Number of images per day : <span id="numberDailyImgsTextValue"> 4 </span></label>
                     <input id="numDailyImgsRange" type="range" class="form-range" min="0" max="6" value=3 step="1" list="markers">
                     <datalist id="markers">
                         <option value="1">1</option>
@@ -44,7 +46,7 @@
                 </div>
                 <div hidden id="EnableImagesInfoOptions" >
                     <div class="form-check-inline form-check form-switch ">    
-                        <label id="EnableImagesInfoText" for="EnableImagesInfoCheck" class="form-label">Display informations from the museum</label>
+                        <label id="EnableImagesInfoText" for="EnableImagesInfoCheck" class="form-label">Display informations from the museum <i class="bi bi-info-circle" title="Those informations are some of those the museum decided to make available. &#013;They are correct and verifiable but aren't the same museum to museum"></i></label>
                         <input id="enableImagesInfoSelect" class="form-check-input " type="checkbox" role="switch"  >
                     </div>
                 </div>
