--- a/src/html/override_newtab.html
+++ b/src/html/override_newtab.html
@@ -16,11 +16,11 @@
         <img id="zoomImg" src="" class="img-fluid" />
     
     </div>
-    <div class="container-fluid pt-3 pb-5 text-center"  id="newTabContainer" >
+    <div class="container-fluid pt-3 pb-4 text-center"  id="newTabContainer" >
         <div class="row justify-content-center" style="width: 100%;">
 
-            <div id="artInfoDivLeft" class="col col-3 d-flex justify-content-center d-none d-xl-block">
-                <div id="additionalInfoDisplay" class="d-flex " >
+            <div id="artInfoDivLeft" class="col ps-3 col-3 d-flex justify-content-center d-none d-xl-block">
+                <div id="additionalInfoDisplay" class="d-flex mt-4" >
 
                 </div>
             </div>
@@ -53,7 +53,7 @@
                     </div>
                     </div>
 
-                    <p id="imgCaption" ></p>
+                    <p id="imgCaption" class="pt-2"></p>
 
                     <div class="col pt-3">
                     <form action="https://www.google.com/search" method="get" class="search-bar-form">
