--- a/src/html/override_newtab.html
+++ b/src/html/override_newtab.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#CA181C" />
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FFCAFA" />
+    <meta name="dark-theme-color" media="(prefers-color-scheme: dark)" content="#CA181C" />
+    <meta name="light-theme-color" media="(prefers-color-scheme: light)" content="#FFCAFA" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
